--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,14 +18,14 @@ jobs:
           mdbook-version: '0.4.8'
           # mdbook-version: 'latest'
 
-      # FIXME: Keep this up to date
       - name: Install mdbook-linkcheck
-        run: | # `-L` because GitHub performs a redirection
+        run: |
           curl -L -o mdbook-linkcheck.zip "https://github.com/Michael-F-Bryan/mdbook-linkcheck/releases/download/v0.7.4/mdbook-linkcheck.v0.7.4.x86_64-unknown-linux-gnu.zip"
           unzip mdbook-linkcheck.zip mdbook-linkcheck
           chmod +x mdbook-linkcheck
-      - env:
-          MDBOOK_OUTPUT__LINKCHECK__COMMAND: "./mdbook-linkcheck"
+      - name: build
+        #env:
+        #  MDBOOK_OUTPUT__LINKCHECK__COMMAND: "./mdbook-linkcheck"
         run: mdbook build
 
       - name: Deploy
