Add optional linkcheck, see if we can fix this github actions issue

--- a/book.toml
+++ b/book.toml
@@ -8,3 +8,7 @@ title = "Gameboy Software Development Kit"
 [output.html]
 default-theme = "ayu"
 preferred-dark-theme = "ayu"
+
+[output.linkcheck]
+follow-web-links = true
+optional = true
