--- a/book.toml
+++ b/book.toml
@@ -8,6 +8,7 @@ title = "Gameboy Software Development Kit"
 [output.html]
 default-theme = "ayu"
 preferred-dark-theme = "ayu"
+git-repository-url = "https://github.com/daid/gbsdk/tree/book"
 
 [output.linkcheck]
 follow-web-links = true
